www/css/common.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);

body {
    display: block !important;
    margin: 0 0 36px 0;
    font-family: "Open Sans",arial,sans-serif;
    padding: 0px;
    background-color: #eee;
}

h2 {
    font-weight: 300;
}

* { 
    font-weight: 400;
}

#heading {
    width: 100%;
}

#logoContainer {
    padding: 20px;
    background-color: #f5f5f5;
    margin-bottom: 34px;
}

#logo {
    margin-left: 100px;
}

#tabBar {
    position: absolute;
    top: 100px;
    width: 100%;
    background-color: #2d2d2d;
    padding: 5px 0 5px 0;
    z-index: 1000;
    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 6px;
}

#tabs {
    margin: 0 0 0 120px;
    list-style: none;
    padding: 0;
}

#tabs li {
    display: inline;
    padding-right: 12px;
}

#tabs li a {
    color: #ccc;
    text-decoration: none;
}

#tabs li a:hover {
    color: #fff;
    cursor: hand;
}

#footer {
    position: fixed;
    width: 100%;
    bottom: 0;
    background-color: #2d2d2d;
    z-index: 999;
    box-shadow: rgba(0, 0, 0, 0.4) 0px -2px 6px;
}

#footer img {
    vertical-align: bottom;
    float: right;
    margin: 3px 4px 3px 0;
}

.framed {
    border: 5px solid white;
    box-shadow: 2px 2px 15px #888;
}

#posts {
    margin: 0 auto 0 auto;
    overflow: hidden;
    width: 1120px;
    background-color: white;
    box-shadow: 0 0 8px #888888;
    position: relative;
}

